@@ -1,6 +1,0 @@
-PulseAudio Preferences (paprefs) is a simple GTK based configuration dialog
-for the PulseAudio sound server.
-
-Please note that this program can only configure local servers, and requires
-that a special module module-gconf is loaded in the sound server. (Since
-PulseAudio 0.9.5 this modules is loaded by default.)
